# projetosevenpage

./: .env-example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
core/: config.py  settings.py
projects/: admin.py  models.py
projects/migrations/: 0001_initial.py
